# clash-subcribe

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/skills/git-commit/: SKILL.md
config/: clash.template.yaml  config.example.yaml  mihomo.template.yaml
script/: mihomo.vbs
src/clash_subcribe/: __init__.py  __main__.py  cli.py  config.py  exceptions.py  logging_setup.py  pipeline.py
src/clash_subcribe/emitter/: __init__.py  base.py  file_emitter.py  stdout_emitter.py
src/clash_subcribe/fetcher/: __init__.py  base.py  file_fetcher.py  http_fetcher.py
src/clash_subcribe/models/: __init__.py  config.py  proxy.py
src/clash_subcribe/parser/: __init__.py  base.py  clash_parser.py  url_parser.py
src/clash_subcribe/processors/: __init__.py  base.py  dedup.py  filter.py  rename.py  sort.py
src/clash_subcribe/renderer/: __init__.py  clash_renderer.py
tests/: _fixtures.py  conftest.py
tests/integration/: test_pipeline.py
tests/unit/: test_config.py  test_emitter.py  test_fetcher.py  test_parser.py  test_processors.py  test_proxy.py  test_renderer.py
